<resources>
    <string name="app_name">Nexle_ExamApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_get_started">Let’s get you started!</string>
    <string name="text_check_box_age">I am over 16 years of age</string>
    <string name="text_term">By clicking Sign Up, you are indicating that you have read and agree to the <font fgcolor='#647FFF'>Terms of Service</font> and <font fgcolor='#647FFF'>Privacy Policy</font></string>


    <string name="text_password_too_short">Too short</string>
    <string name="text_password_weak">Weak</string>
    <string name="text_password_fair">Fair</string>
    <string name="text_password_good">Good</string>
    <string name="text_password_strong">Strong</string>
    <string name="text_your_email">Your email</string>
    <string name="text_your_password">Your password</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_welcome_to_flutter_test">Welcome to Flutter Test</string>
    <string name="text_categories_instruction">Please select categories what you would like to\n see on your feed. You can set this later on Filter.</string>
</resources>